updated some interactions

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,5 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "env": {
-    "NOTION_API_KEY": "@notion_api_key",
-    "NOTION_DATABASE_ID": "@notion_database_id"
-  }
+  "framework": "nextjs"
 }
