--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.3.0",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/rapier": "^1.3.0",
     "framer-motion": "^10.16.16",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
